RESOLVED FIXED67829
REGRESSION(r94811): Assertion failure in 2 worker tests
https://bugs.webkit.org/show_bug.cgi?id=67829
Summary REGRESSION(r94811): Assertion failure in 2 worker tests
Ryosuke Niwa
Reported 2011-09-08 20:27:37 PDT
The following 2 tests started hitting an assertion. fast/workers/worker-close-more.html fast/workers/use-machine-stack.html
Attachments
Patch (1.80 KB, patch)
2011-09-08 22:03 PDT, Mark Hahnenberg
no flags
Ryosuke Niwa
Comment 4 2011-09-08 20:33:53 PDT
Oops, I mistook build numbers for revision numbers.
Ryosuke Niwa
Comment 5 2011-09-08 21:32:52 PDT
I manually bisected and determined r94811 to be the cause.
Sam Weinig
Comment 6 2011-09-08 21:59:47 PDT
Looks like it is a missing &Base::s_info in exception classes I added. Mark H. is going to land a fix for me.
Mark Hahnenberg
Comment 7 2011-09-08 22:03:40 PDT
Sam Weinig
Comment 8 2011-09-08 22:04:58 PDT
Thanks Mark!
Ryosuke Niwa
Comment 9 2011-09-08 22:52:30 PDT
I have confirmed that this patch works and passes all the layout tests. Thanks Mark!
Ryosuke Niwa
Comment 10 2011-09-08 23:06:16 PDT
Comment on attachment 106840 [details] Patch Clearing flags on attachment: 106840 Committed r94835: <http://trac.webkit.org/changeset/94835>
Ryosuke Niwa
Comment 11 2011-09-08 23:06:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.