REGRESSION(r94811): Assertion failure in 2 worker tests https://bugs.webkit.org/show_bug.cgi?id=67829

Patch by Mark Hahnenberg <mhahnenberg@apple.com> on 2011-09-08
Reviewed by Sam Weinig.

Fixing a couple tests that were broken due to the wrong values being
set in the parent class pointers in the ClassInfo structs for
TerminatedExecutionError and InterruptedExecutionError.

* runtime/ExceptionHelpers.cpp:


Canonical link: https://commits.webkit.org/83728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94835 268f45cc-cd09-0410-ab3c-d52691b4dbfc